--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Demo project",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,10 @@
   "homepage": "https://github.com/Coudnet/itmo-demo-2024#readme",
   "dependencies": {
     "fastify": "^4.26.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
